--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
   <head>
-    <title>Hack Spots</title>
+    <title>Frontend Events</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <!--<script type="text/javascript" src='http://api.tiles.mapbox.com/mapbox.js/v1.4.0/mapbox.js'></script>-->
     <script type="text/javascript" src="scripts/jquery.js"></script>
     <script type="text/javascript" src="scripts/tabletop.js"></script>
     <script type="text/javascript" src='scripts/sheetsee.js'></script>
-    <!--<script type="text/javascript" src='scripts/leaflet.markercluster.js'></script>-->
     <link rel="stylesheet" type="text/css" href="css/sss.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
