--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p>This website is hooked up to <a href="https://docs.google.com/spreadsheet/ccc?key=0AsxZWWM7rVLodGt1REhjeGhYMDk2SG9nc0JsNGFxb1E#gid=0" target="_blank">this Google Spreadsheet</a>, which I've shared, so click and add your favorite event to the bottom of the list!</p>
 
       <h3>Fork-n-Go</h3>
-      <p>This is a work-in-progress example of a fork-n-go project - which means, there is just a <a href="https://github.com/jlord/hack-spots" target="_blank">gh-pages branch in GitHub</a> for this project so when you fork it, you've got a live and hosted website instantly. BAM! Just copy the spreadsheet headers and create your own spreadsheet, swap out the spreadsheet key in index.html and commit those changes. BAM! You've got a live and hosted site with a spreadsheet you control. More on the <a href="http://www.github.com/jlord/hack-spots" target="_blank">readme</a>.</p>
+      <p>This is a work-in-progress example of a fork-n-go project - which means, there is just a <a href="http://foldi.github.io/frontend-events/" target="_blank">gh-pages branch in GitHub</a> for this project so when you fork it, you've got a live and hosted website instantly. BAM! Just copy the spreadsheet headers and create your own spreadsheet, swap out the spreadsheet key in index.html and commit those changes. BAM! You've got a live and hosted site with a spreadsheet you control. More on the <a href="http://foldi.github.io/frontend-events/" target="_blank">readme</a> or <a href='https://github.com/jlord/hack-spots'>Hack-Spots</a>.</p>
 
     </div>
 
